welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: value chtoInt is not a member of String
val decalage = litMessage()chtoInt
                           ^